Fix padding and margin on mobile 404 page for responsiveness

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -41,10 +41,12 @@
 }
 
 .container-fluid {
-  Display: flex;
-  Height: 100vh;
-  Width: 100vw; 
-  Align-Items: center;
-  Justify-Content: center;
-  object-fit: contain;
+  text-align: center;
+  overflow-x: hidden;
+  padding-top: 10rem;
+  margin-bottom: 12.7rem;
+}
+
+.image-404 {
+  max-width: 400px;
 }
